apply plugin: 'java'

sourceCompatibility = 9
targetCompatibility = 9

group = 'com.kndykndy'
version = '1.0'

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
}
